Vorholt model accommodations and ID mapping files

--- a/examples/Community Modeling/smetana/Vorholt_replication.ipynb
+++ b/examples/Community Modeling/smetana/Vorholt_replication.ipynb
@@ -20277,6 +20277,45 @@
       "modelseedpy 0.2.2\n",
       "cobrakbase 0.3.1\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Name</strong></td>\n",
+       "                <td>GCF_001424595.1.RAST.fbamodel</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>2aa92165dc0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of metabolites</strong></td>\n",
+       "                <td>1097</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of reactions</strong></td>\n",
+       "                <td>1189</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of genes</strong></td>\n",
+       "                <td>829</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Number of groups</strong></td>\n",
+       "                <td>639</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Objective expression</strong></td>\n",
+       "                <td>1.0*bio1 - 1.0*bio1_reverse_b18f7</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Compartments</strong></td>\n",
+       "                <td>Cytosol_0, Extracellular_0</td>\n",
+       "            </tr>\n",
+       "          </table>"
+      ],
+      "text/plain": [
+       "<FBAModel GCF_001424595.1.RAST.fbamodel at 0x2aa92165dc0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -20612,7 +20651,19 @@
    "execution_count": 2,
    "id": "3d8fb964-53a6-4816-88c7-be35a338cf48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m MSmodels \u001b[38;5;241m=\u001b[39m [GCF_001424595, GCF_001421165, GCF_001421425, GCF_001421805, GCF_001423105, GCF_001423785, GCF_001423665, GCF_001426165, GCF_001422185, GCF_001421235, GCF_001423565]\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m MSmodels:\n\u001b[1;32m---> 11\u001b[0m     save_json_model(model, path\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVorholt models\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnew\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# MS2 reconstructed models\u001b[39;00m\n\u001b[0;32m     14\u001b[0m GCF_001424595 \u001b[38;5;241m=\u001b[39m kbase_api\u001b[38;5;241m.\u001b[39mget_from_ws(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m154981/88/1\u001b[39m\u001b[38;5;124m\"\u001b[39m)  ;  GCF_001421165 \u001b[38;5;241m=\u001b[39m kbase_api\u001b[38;5;241m.\u001b[39mget_from_ws(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m154981/96/1\u001b[39m\u001b[38;5;124m\"\u001b[39m)  ;  GCF_001421425 \u001b[38;5;241m=\u001b[39m kbase_api\u001b[38;5;241m.\u001b[39mget_from_ws(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m154981/89/1\u001b[39m\u001b[38;5;124m\"\u001b[39m)  ;  GCF_001421805 \u001b[38;5;241m=\u001b[39m kbase_api\u001b[38;5;241m.\u001b[39mget_from_ws(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m154981/90/1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'id'"
+     ]
+    }
+   ],
    "source": [
     "from cobra.io import write_sbml_model, save_json_model\n",
     "from os import path\n",
@@ -20635,6 +20686,156 @@
     "for model in MSmodels:\n",
     "    save_json_model(model, path.join(\"Vorholt models\", \"MS2\", f\"{model.id}.json\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8023f579-550c-49fb-a84d-abfdb4af9f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GCF_001424595 = kbase_api.get_from_ws(\"153650/30/1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6f550a2a-a9ec-44ad-98ce-4351a9007eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(GCF_001424595)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd24360a-8cd3-4728-b82c-70c77ff0c9c8",
+   "metadata": {},
+   "source": [
+    "## Diff the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1dbc40f2-c141-4eeb-b0b8-686bdb4dd82e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cobra.io import read_sbml_model\n",
+    "GCF_001423785 = kbase_api.get_from_ws(\"154981/92/1\")\n",
+    "GCF_001423785_loaded = read_sbml_model(\"Vorholt models/MS2/GCF_001423785.1.RAST.mdl.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "53c2122a-2b0a-40a8-98f6-5b791f1c8fb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "kbase_rxns = set([rxn.id for rxn in GCF_001423785.reactions])\n",
+    "loaded_rxns = set([rxn.id for rxn in GCF_001423785_loaded.reactions])\n",
+    "print(kbase_rxns-loaded_rxns)\n",
+    "print(loaded_rxns-kbase_rxns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4afe8ac8-71f0-4c1b-b69c-52ef42ff02f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rxnID\t KBase bounds\t loaded bounds\n"
+     ]
+    }
+   ],
+   "source": [
+    "kbase_rxns = dict([(rxn.id, rxn.bounds) for rxn in GCF_001423785.reactions])\n",
+    "loaded_rxns = dict([(rxn.id, rxn.bounds) for rxn in GCF_001423785_loaded.reactions])\n",
+    "print(\"rxnID\\t\", \"KBase bounds\\t\", \"loaded bounds\")\n",
+    "for rxnID, bounds in kbase_rxns.items():\n",
+    "    if loaded_rxns[rxnID] != bounds:\n",
+    "        print(rxnID, bounds, loaded_rxns[rxnID])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d3078302-5cfb-4c26-84eb-5c9415bf1a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximize\n",
+      "1.0*bio1 - 1.0*bio1_reverse_b18f7\n",
+      "Maximize\n",
+      "1.0*bio1 - 1.0*bio1_reverse_b18f7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(GCF_001423785.objective)\n",
+    "print(GCF_001423785_loaded.objective)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "313ce26f-f67e-4253-b926-b76c1c3e94c8",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "kbase_constraints = set([cons.name for cons in GCF_001423785.constraints])\n",
+    "loaded_constraints = set([cons.name for cons in GCF_001423785_loaded.constraints])\n",
+    "print(kbase_constraints-loaded_constraints)\n",
+    "print(loaded_constraints-kbase_constraints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1530144d-6cf8-41e2-856e-5cf8d1c02b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
