--- a/examples/Community Modeling/smetana/Vorholt_replication.ipynb
+++ b/examples/Community Modeling/smetana/Vorholt_replication.ipynb
@@ -1013,14 +1013,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "55e6e35d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/afreiburger/Documents/CommScores/commscores/data/BiGG_to_MSID.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# with open(r\"C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\CommScores\\commscores\\data\\BiGG_to_MSID.json\", \"r\") as jsonOpen:\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/afreiburger/Documents/CommScores/commscores/data/BiGG_to_MSID.json\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m jsonOpen:\n\u001b[1;32m      5\u001b[0m     mappings \u001b[38;5;241m=\u001b[39m load(jsonOpen)\n\u001b[1;32m      7\u001b[0m bigg_mappings \u001b[38;5;241m=\u001b[39m {v:k \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m mappings\u001b[38;5;241m.\u001b[39mitems()}\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/afreiburger/Documents/CommScores/commscores/data/BiGG_to_MSID.json'"
+     ]
+    }
+   ],
    "source": [
     "from json import load\n",
     "\n",
-    "with open(r\"C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\CommScores\\commscores\\data\\BiGG_to_MSID.json\", \"r\") as jsonOpen:\n",
+    "# with open(r\"C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\CommScores\\commscores\\data\\BiGG_to_MSID.json\", \"r\") as jsonOpen:\n",
+    "with open(r\"/Users/afreiburger/Documents/CommScores/commscores/data/BiGG_to_MSID.json\", \"r\") as jsonOpen:\n",
     "    mappings = load(jsonOpen)\n",
     "\n",
     "bigg_mappings = {v:k for k,v in mappings.items()}"
@@ -1047,25 +1060,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "f3a0d20f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cobra.io import read_sbml_model\n",
+    "from glob import glob\n",
     "\n",
-    "test_model = read_sbml_model(r\"C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\CommScores\\commscores\\data\\models\\vorholt models\\Leaf1.xml\")\n",
-    "rxns = [rxn.id for rxn in test_model.reactions]\n",
-    "test_model.medium = {ID:flux for ID, flux in r2a_media_bigg.items() if ID in rxns}\n",
-    "print(test_model.slim_optimize())"
+    "for model in glob(r\"C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\CommScores\\commscores\\data\\models\\vorholt models\\*.xml\"):\n",
+    "    test_model = read_sbml_model(model)\n",
+    "    rxns = [rxn.id for rxn in test_model.reactions]\n",
+    "    test_model.medium = {ID:flux for ID, flux in r2a_media_bigg.items() if ID in rxns}\n",
+    "    print(test_model.slim_optimize())"
    ]
   },
   {
@@ -1166,7 +1173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
